--- a/ms/templates/home/info.html
+++ b/ms/templates/home/info.html
@@ -43,7 +43,7 @@
 	                     <h3>CONFIRM<br> AND PAY</h3>
 	                 </div>
 				</div>
-				<div class="col-md-2"></div>
+				
 			</div>
 		</div>
 	</div>
@@ -103,12 +103,12 @@
 			<div style="clear:both;"></div>
 			<ul class="form-inner">
 				<li class="form-fields">
-					<font>Compound Name<span class="optional-area">(Optional)</span></font>
+					<font>Compound Name<span class="optional-area" style="left: 50px;">(optional)</span></font>
 					{{ form.compound }}
 					{{ form.compound.errors }}
 				</li>
 				<li class="form-fields">
-					<font>Area<span class="optional-area">(Optional)</span></font>
+					<font>Area<span class="optional-area">(optional)</span></font>
 					{{ form.area }}
 					{{ form.area.errors }}
 				</li>
@@ -130,13 +130,13 @@
 					{{ form.cross.errors }}
 				</li>
 				<li class="form-fields">
-					<font>Building #<span class="optional-area">(Optional)</span></font>
+					<font>Building #<span class="optional-area">(optional)</span></font>
 					{{ form.bldg_num }}
 					{{ form.bldg_num.errors }}
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Apartment #<span class="optional-area">(Optional)</span></font>
+					<font>Apartment #<span class="optional-area">(optional)</span></font>
 					{{ form.apt_num }}
 					{{ form.apt_num.errors }}
 				</li>
