--- a/ms/userena/templates/userena/profile_form.html
+++ b/ms/userena/templates/userena/profile_form.html
@@ -16,7 +16,7 @@
 	<h5><a href="{% url 'userena_signout'%}">Sign Out</a></h5>
 	<div id="a-box">
 		<div id="a-type">Account Balance</div>
-		<div id="a-rest">5,000 RMB</div>
+		<div id="a-rest">0 RMB</div>
 	</div>
 </div>
 <div id="l-column">
@@ -54,13 +54,13 @@
 					{{ form.mobile.errors }}
 				</li>
 				<li class="form-fields">
-					<font>Compound Name<span class="optional-area">(Optional)</span></font>
+					<font>Compound Name<span class="optional-area">(optional)</span></font>
 					{{ form.compound }}
 					{{ form.compound.errors }}
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Area<span class="optional-area">(Optional)</span></font>
+					<font>Area<span class="optional-area">(optional)</span></font>
 					{{ form.area }}
 					{{ form.area.errors }}
 				</li>
@@ -82,12 +82,12 @@
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Building #<span class="optional-area">(Optional)</span></font>
+					<font>Building #<span class="optional-area">(optional)</span></font>
 					{{ form.bldg_num }}
 					{{ form.bldg_num.errors }}
 				</li>
 				<li class="form-fields">
-					<font>Apartment #<span class="optional-area">(Optional)</span></font>
+					<font>Apartment #<span class="optional-area">(optional)</span></font>
 					{{ form.apt_num }}
 					{{ form.apt_num.errors }}
 				</li>
