--- a/ms/static/css/accounts.css
+++ b/ms/static/css/accounts.css
@@ -111,7 +111,7 @@ h3 {
 #l-column {
 	width:80%;
 	float:left;
-	padding: 47px 25px;
+	padding: 0 25px;
 }
 .form-inner{
 	padding: 0;
@@ -221,7 +221,7 @@ h3 {
 	width:150px;
 }
 #top-column{
-	padding: 35px;
+	padding: 35px 35px 60px 35px;
 	text-align: center;
 }
 .choose-box{
@@ -266,6 +266,9 @@ h3 {
 	cursor:pointer;
 	width:140px;
 }
+.type-box{
+	width:85px;
+}
 .input-group-addon {
 	top: 1px;
 	right: 16px;
@@ -275,4 +278,9 @@ h3 {
 	background-color: #FFF;
 	display: inline-table;
 	z-index: 99;
+}
+#make_new{
+	font-size: 16px;
+	font-weight: bold;
+	margin-bottom:8px;
 }
