--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -38,10 +38,9 @@
 	      			<input type="text" class="time-box" readonly="readonly" name="clean_time">
 	      			<span class="input-group-addon glyphicon glyphicon-time"></span>
       			</div>
-      			<select id="type-box" name="clean_type">
-      				<option value="1">One Time</option>
-      				<option value="2">Weekly</option>
-            	</select>
+      			<div class="input-group time-div">
+	      			<input type="text" class="type-box" readonly="readonly" value="One Time">
+      			</div>
             	<button id="clean-book" type="submit">BOOK NOW</button>
             </form>
       		</div>
@@ -53,17 +52,17 @@
 		<li>
 			<img src="/static/img/f1.png" alt="feature" />
 			<p>100% Satisfaction Guarantee</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="If you are not completely satisfied with your cleaning, we will come back and re-clean it for free!">Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="If you are not completely satisfied with your cleaning, we will come back and re-clean it for free!">learn more</font>
 		</li>
 		<li>
 			<img src="/static/img/f2.png" alt="feature" />
 			<p>Professionally Trained and Certified Cleaners</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="Every Merry Cleaner goes through an extensive training program to proudly wear the uniform">Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="Every Merry Cleaner goes through an extensive training program to proudly wear the uniform">learn more</font>
 		</li>
 		<li>
 			<img src="/static/img/f4.png" alt="feature" />
 			<p>Trust & Safety</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry Cleaners are background checked for your safety and peace of mind.">Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry Cleaners are background checked for your safety and peace of mind.">learn more</font>
 			<div class="bpop" id="bpop-ts">
 				<span class="b-close">x</span>
 				<div class="b-content"></div>
@@ -101,7 +100,7 @@
 					<h4 class="space-border">What's Included in the Cleaning?</h4>
 					<table>
 						<tr>
-							<td>
+							<td valign="top">
 								<p class="big-font">Bedroom</p>
 								<ol>
 									<li>Beds made</li>
@@ -121,7 +120,7 @@
 							<td>
 								<img src="/static/img/in2.png">
 							</td>
-							<td>
+							<td valign="top">
 								<p class="big-font">Bathroom</p>
 								<ol>
 									<li>Shower & bathtub rinsed and wiped</li>
@@ -137,7 +136,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td valign="top">
 								<p class="big-font">Kitchen</p>
 								<ol>
 									<li>Dishes washed</li>
@@ -158,7 +157,7 @@
 							<td>
 								<img src="/static/img/in4.png">
 							</td>
-							<td>
+							<td valign="top">
 								<p class="big-font">Other Areas</p>
 								<ol>
 									<li>Furniture & surfaces wiped and dusted</li>
@@ -177,7 +176,7 @@
 						<li>Clothes ironed</li>
 					</ol>
 					<h4 class="space-border"></h4>
-					<center><h4>Service NOT Included</h4></center>
+					<center><h4>Services NOT Included</h4></center>
 					<em>Due to insurance liability, safety constraints and other considerations we do not offer the following:</em>
 					<ul>
 						<li>Deep stain removal</li>
@@ -203,11 +202,11 @@
 <script>
 $('.date-box').val('{{ default_date }}');
 var timeNow = new Date();
-var hourAllow = timeNow.getHours()+4;
+var hourAllow = timeNow.getHours()+5;
 var changeDay = timeNow.toDateString().split(' ')[2];
 var dayNow = $('.date-box').val().split(' ')[0];
 
-if( hourAllow>20 || hourAllow<8 ){
+if( hourAllow>19 || hourAllow<8 ){
 	var timeAllow = '08:00';
 }else{
 	var timeAllow = hourAllow.toString()+':00';
@@ -217,7 +216,7 @@ $('.time-box').datetimepicker({
 	datepicker:false,
 	format:'H:i',
 	minTime: timeAllow,
-	maxTime:'21:00',
+	maxTime:'20:00',
 	step:60
 	});
 $('.time-box').val(timeAllow);
@@ -230,7 +229,7 @@ var logic = function( currentDateTime ){
 			datepicker:false,
 			format:'H:i',
 			minTime: timeAllow,
-			maxTime:'21:00',
+			maxTime:'20:00',
 			step:60
 			});
 	}else{
@@ -239,7 +238,7 @@ var logic = function( currentDateTime ){
 			datepicker:false,
 			format:'H:i',
 			minTime: '08:00',
-			maxTime:'21:00',
+			maxTime:'20:00',
 			step:60
 			});
 	}
