--- a/ms/userena/templates/userena/password_reset_form.html
+++ b/ms/userena/templates/userena/password_reset_form.html
@@ -18,7 +18,7 @@
 			{{ field.errors }}
 		    {% endfor %}
 		  </fieldset>
-		  <input id="si_sub" type="submit" value="{% trans "Send password" %}" />
+		  <input id="si_sub" type="submit" value="{% trans "Send Password" %}" />
 		</form>
 	</div>
 	<div id="si-fea">
