--- a/ms/templates/home/about.html
+++ b/ms/templates/home/about.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Merry Cleaning Services - About Us{% endblock title %}
+{% block description %}About Us - Luxury ayi house cleaning in Shanghai, China for expats and local Chinese.  English speaking customer service. Book Online{% endblock description %}
 {% block extra_css %}
 <link rel="stylesheet" href="/static/css/common.css">
 {% endblock extra_css %}
@@ -7,9 +9,9 @@
 	<div class="container">
 		<div class="common-content">
 			 <h1>About Us</h1>
-			 <p>Merry Cleaning Services has been established to serve expatriates in Shanghai and assist them in facing the challenges of life in a foreign country. With a highly trained service team of well-educated professionals, Merry Cleaning Services provides international clients with responsible customer-oriented, cost-effective and value-added services.</p>
-			 <p>Since its establishment, Merry Cleaning Services has developed an ability to constantly improve its services in order to meet the cost saving and high quality service requirements of its customers, while positioning Merry Cleaning Services as a high-end market leader. This is why customers trust our expertise and service quality.</p>
-			 <p>Benefiting from strong local market knowledge, a large information network, and the flexibility that comes with a deep understanding of the expectations of clients, Merry Cleaning Services is confident of delivering the most suitable and personalized home service solution.</p>
+			 <p>Merry Cleaning Services has been established to serve expatriates and local Chinese in Shanghai, China and assist them in facing the challenges of life in a foreign country. With a highly trained service team of well-educated professionals, Merry Cleaning Services provides international clients with responsible customer-oriented, cost-effective and value-added services.</p>
+			 <p>Since its establishment, Merry Cleaning Services has developed an ability to constantly improve its services in order to meet the cost saving and high quality service requirements of its customers, while positioning Merry Cleaning Services as a high-end market leader. This is why expats and local Chinese trust our expertise and service quality.</p>
+			 <p>Benefiting from strong local market knowledge, a large information network, and the flexibility that comes with a deep understanding of the expectations of clients, Merry Cleaning Services is confident of delivering the most suitable and personalized home service solution of ayi in Shanghai.</p>
 		</div>
 	</div>
 </div>
