--- a/ms/templates/home/policy.html
+++ b/ms/templates/home/policy.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Merry Cleaning Services -  Privacy Policy{% endblock title %}
+{% block description %}Privacy Policy - Luxury ayi house cleaning in Shanghai, China for expats and local Chinese.  English speaking customer service. Book Online{% endblock description %}
 {% block extra_css %}
 <link rel="stylesheet" href="/static/css/common.css">
 {% endblock extra_css %}
