--- a/ms/userena/templates/userena/signin_form.html
+++ b/ms/userena/templates/userena/signin_form.html
@@ -1,8 +1,8 @@
 {% extends 'userena/base_userena.html' %}
 {% load i18n %}
 {% load url from future %}
-
-{% block title %}{% trans "Signin" %}{% endblock %}
+{% block description %}Sign In - Luxury ayi house cleaning in Shanghai, China for expats and local Chinese.  English speaking customer service. Book Online{% endblock description %}
+{% block title %}{% trans "Merry Cleaning Services - Sign In" %}{% endblock %}
 
 {% block content_extra %}
 <div id="si-content">
