--- a/ms/static/css/step.css
+++ b/ms/static/css/step.css
@@ -295,6 +295,42 @@ textarea{
 .co-sc h3{
 	margin-top:0;
 }
+.confirm-pop{
+	background-color: #FFF;
+	color: #111;
+	display: none;
+	padding: 12px;
+}
+.confirm-close {
+	border-radius: 0;
+	font: bold 20px arial;
+	padding: 0 6px 2px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	color: gray;
+	cursor: pointer;
+	display: inline-block;
+	text-align: center;
+	text-decoration: none;
+	background-color: #fff;
+}
+.confirm-content{
+	width: 620px;
+}
+#confirm-top{
+	text-align:center;
+	margin-bottom: 30px;
+}
+.confirm-content h4{
+	text-align:center;
+	font-size:22px;
+	font-weight:bold;
+	margin-bottom: 25px;
+}
+.confirm-content ol li{
+	padding:5px 0;
+}
 @media (max-width: 1200px) {
 
 .service_border{
