--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{% block title %}Merry Cleaning Services | Luxury Ayi Cleaning Shanghai{% endblock title %}</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
+    <meta name="description" content="{% block description %}Luxury ayi house cleaning in Shanghai, China for expats and local Chinese.  Maid online booking.  English speaking customer service{% endblock description %}" />
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/ms.css">
 	<link rel="shortcut icon" href="/static/img/favicon.png">
@@ -33,7 +34,17 @@
     			</a>
     		</div>
     		<ul class="nav navbar-nav navbar-right">
-    				
+    				<li>
+    					<div class="navbar-text lang-margin">
+    					{% if request.session.lang == "cn" %}
+    						<a href="/lang/en/">En</a> / 
+    						<font>中文</font>
+    					{% else %}
+    						<font>En</font> / 
+    						<a href="/lang/cn/">中文</a>
+    					{% endif %}
+    					</div>
+    				</li>
     				<li id="social">
     					<img class="h-t" src="/static/img/wx.png" data-toggle="tooltip" data-placement="bottom" />
     					<div class="tooltip fade bottom in" role="tooltip" id="tooltip86302"><div class="tooltip-arrow"></div><div class="tooltip-inner tool-qr"><img src="/static/img/qr.jpg" style="width:200px;height:200px;" /></div></div>
@@ -94,6 +105,16 @@
 <script src="/static/js/jquery.easing.1.3.js"></script>
 <script src="/static/js/bpopup.min.js"></script>
 <script src="/static/js/ms.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56126302-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 {% block extra_js %}{% endblock extra_js %}
 {% block aditional_js %}{% endblock aditional_js %}
 </body>
