--- a/ms/userena/templates/userena/password_reset_form.html
+++ b/ms/userena/templates/userena/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends 'userena/base_userena.html' %}
 {% load i18n %}
-
-{% block title %}{% trans "Reset password" %}{% endblock %}
+{% block description %}Reset password - Luxury ayi house cleaning in Shanghai, China for expats and local Chinese.  English speaking customer service. Book Online{% endblock description %}
+{% block title %}{% trans "Merry Cleaning Services - Reset Password" %}{% endblock %}
 
 {% block content_extra %}
 <div id="si-content">
